@@ -360,8 +360,7 @@ extern void serv_set_idle(struct gaim_connection *, int);
 extern void serv_set_info(struct gaim_connection *, char *);
 extern void serv_set_away(struct gaim_connection *, char *, char *);
 extern void serv_set_away_all(char *);
-extern int  serv_send_typing(struct gaim_connection *, char *);
-extern void serv_send_typing_stopped(struct gaim_connection *, char *);
+extern int  serv_send_typing(struct gaim_connection *, char *, int);
 extern void serv_change_passwd(struct gaim_connection *, char *, char *);
 extern void serv_add_buddy(struct gaim_connection *, char *);
 extern void serv_add_buddies(struct gaim_connection *, GList *);
